// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiFormControlLayoutDelimited is rendered 1`] = `
<div
  aria-label="aria-label"
  class="ouiFormControlLayout ouiFormControlLayoutDelimited testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="ouiFormControlLayout__childrenWrapper"
  >
    <span
      class="ouiFormControlLayoutDelimited__input"
    >
      start
    </span>
    <div
      class="ouiText ouiText--small ouiFormControlLayoutDelimited__delimeter"
    >
      <div
        class="ouiTextColor ouiTextColor--subdued"
      >
        →
      </div>
    </div>
    <span
      class="ouiFormControlLayoutDelimited__input"
    >
      end
    </span>
  </div>
</div>
`;

exports[`OuiFormControlLayoutDelimited props delimiter is rendered as a node 1`] = `
<div
  class="ouiFormControlLayout ouiFormControlLayoutDelimited"
>
  <div
    class="ouiFormControlLayout__childrenWrapper"
  >
    <span
      class="ouiFormControlLayoutDelimited__input"
    >
      start
    </span>
    <div
      class="ouiText ouiText--small ouiFormControlLayoutDelimited__delimeter"
    >
      <div
        class="ouiTextColor ouiTextColor--subdued"
      >
        <span
          data-ouiicon-type="alert"
        />
      </div>
    </div>
    <span
      class="ouiFormControlLayoutDelimited__input"
    >
      end
    </span>
  </div>
</div>
`;

exports[`OuiFormControlLayoutDelimited props delimiter is rendered as a string 1`] = `
<div
  class="ouiFormControlLayout ouiFormControlLayoutDelimited"
>
  <div
    class="ouiFormControlLayout__childrenWrapper"
  >
    <span
      class="ouiFormControlLayoutDelimited__input"
    >
      start
    </span>
    <div
      class="ouiText ouiText--small ouiFormControlLayoutDelimited__delimeter"
    >
      <div
        class="ouiTextColor ouiTextColor--subdued"
      >
        +
      </div>
    </div>
    <span
      class="ouiFormControlLayoutDelimited__input"
    >
      end
    </span>
  </div>
</div>
`;
